blog auto backup script's commit

--- a/themes/Sakura/layout/category.ejs
+++ b/themes/Sakura/layout/category.ejs
@@ -10,9 +10,9 @@
   </div>
   <header class="pattern-header ">
     <h1 class="cat-title"><%= __(zh) %></h1>
-    <span class="cat-des">
+    <!-- <span class="cat-des">
       <p><%= __(en) %></p>
-    </span>
+    </span> -->
   </header>
 </div>
 <div id="content" class="site-content">
