--- a/themes/Sakura/layout/_widget/index-items.ejs
+++ b/themes/Sakura/layout/_widget/index-items.ejs
@@ -3,7 +3,7 @@
 
   <div class="post-thumb">
     <a href="<%- url_for(post.path) %>">
-      <img class="lazyload" onerror="imgError(this,3)" src="<%- theme.lazyloadImg%>" data-src="<%= post.photos[0] || 'https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/image-404.png' %>">
+      <img class="lazyload" onerror="imgError(this,3)" src="<%- theme.lazyloadImg%>" data-src="<%= post.photos[0] || 'https://cdn.jsdelivr.net/gh/Fuann-Kinoko/cdn@0.1/banner/404.jpg' %>">
     </a>
   </div>
   <div class="post-content-wrap">
@@ -31,7 +31,6 @@
         <p><%= post.description %></p>
         <div class="post-bottom">
           <a href="<%- url_for(post.path) %>" class="button-normal">
-            <i class="iconfont icon-caidan"></i>
           </a>
         </div>
       </div>
