blog auto backup script's commit

--- a/themes/Sakura/layout/_widget/index-items.ejs
+++ b/themes/Sakura/layout/_widget/index-items.ejs
@@ -3,7 +3,7 @@
 
   <div class="post-thumb">
     <a href="<%- url_for(post.path) %>">
-      <img class="lazyload" onerror="imgError(this,3)" src="<%- theme.lazyloadImg%>" data-src="<%= post.photos[0] || 'https://cdn.jsdelivr.net/gh/Fuann-Kinoko/cdn@0.1/banner/404.jpg' %>">
+      <img class="lazyload" onerror="imgError(this,3)" src="<%- theme.lazyloadImg%>" data-src="<%= post.photos[0] || 'https://i.loli.net/2021/10/04/SQuhe9lApTmIyoM.jpg' %>">
     </a>
   </div>
   <div class="post-content-wrap">
