--- a/themes/Sakura/layout/_partial/comment.ejs
+++ b/themes/Sakura/layout/_partial/comment.ejs
@@ -9,7 +9,8 @@
           id: window.location.pathname,
           repo: '<%= theme.gitalk.repo %>',
           owner: '<%= theme.gitalk.owner %>',
-          admin: '<%= theme.gitalk.admin %>'
+          admin: '<%= theme.gitalk.admin %>',
+          proxy: '<%= theme.gitalk.proxy %>'
       })
       gitalk.render('gitalk-container')
     </script>
