--- a/themes/Sakura/layout/_partial/comment.ejs
+++ b/themes/Sakura/layout/_partial/comment.ejs
@@ -2,16 +2,16 @@
   <script src="https://cdn.jsdelivr.net/gh/yremp/yremp-js@1.1/gitalk.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yremp/yremp-css@1.3/gitalk.css">
   <div id="gitalk-container"></div>
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
       var gitalk = new Gitalk({
           clientID: '<%= theme.gitalk.clientID %>',
           clientSecret: '<%= theme.gitalk.clientSecret %>',
           id: window.location.pathname,
           repo: '<%= theme.gitalk.repo %>',
           owner: '<%= theme.gitalk.owner %>',
-          admin: '<%= theme.gitalk.admin %>',
-          proxy: '<%= theme.gitalk.proxy %>'
+          admin: '<%= theme.gitalk.admin %>'
+          // proxy: '<%= theme.gitalk.proxy %>'
       })
       gitalk.render('gitalk-container')
-    </script>
+    </script> -->
 <% } %>
