--- a/themes/Sakura/layout/_partial/footer.ejs
+++ b/themes/Sakura/layout/_partial/footer.ejs
@@ -9,7 +9,7 @@
     </div>
   </div>
 </footer> -->
-<div id="gitalk-container"></div>
+<!-- <div id="gitalk-container"></div> -->
 <footer id="colophon" class="site-footer" role="contentinfo">
   <script>
     window.onload = () => {
@@ -39,7 +39,7 @@
 
 
 <!-- <script src="/js/tocbot.js"></script> -->
-<script src="https://cdn.jsdelivr.net/gh/yremp/yremp-js@1.1/gitalk.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/gh/yremp/yremp-js@1.1/gitalk.js"></script> -->
 <script type="text/javascript" src="/js/lib.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js"></script>
 <script type="text/javascript" src="/js/InsightSearch.js"></script>
@@ -47,7 +47,7 @@
 <script type="text/javascript" src="/js/zoom.min.js"></script>
 <script type="text/javascript" src="/js/sakura-app.js"></script>
 <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
-<script src='//unpkg.com/valine@1.3.4/dist/Valine.min.js'></script>
+<script src='https://cdn.jsdelivr.net/npm/valine@1.5.1/dist/Valine.min.js'></script>
 <script src="/js/botui.js"></script>
 <!-- 不蒜子 网页计数器 -->
 <script src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
